crates/service/tests/diagnostics/snapshots/features__diagnostics__implicit_module__incomplete_module.snap
---
source: crates/service/tests/diagnostics/implicit_module.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 0,
          "character": 7
        },
        "end": {
          "line": 0,
          "character": 7
        }
      },
      "severity": 1,
      "source": "wat",
      "message": "syntax error: expected `)`"
    }
  ]
}
