crates/service/tests/diagnostics/snapshots/features__diagnostics__implicit_module__top_level_module_fields.snap
---
source: crates/service/tests/diagnostics/implicit_module.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 0,
          "character": 0
        },
        "end": {
          "line": 0,
          "character": 19
        }
      },
      "severity": 1,
      "code": "implicit-module",
      "source": "wat",
      "message": "top-level module fields should be wrapped in a module"
    }
  ]
}
